--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>home.dgroup</groupId>
-    <artifactId>jsp-compilers</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>jspc-demo</artifactId>
+    <version>0.1</version>
     <build>
         <plugins>
             <plugin>
@@ -20,26 +20,19 @@
         </plugins>
     </build>
 
-    <!--
-         javax.servlet.jsp and javax.servlet.jsp-api for the api, and org.glassfish.web and javax.servlet.jsp
-    -->
-
     <dependencies>
-
         <!-- For servlet support -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.0-b01</version>
         </dependency>
-
         <!-- Contains compiler itself -->
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>javax.servlet.jsp</artifactId>
             <version>2.3.2</version>
         </dependency>
-
         <!-- Testing -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -53,7 +46,6 @@
             <version>2.0.0.0</version>
             <scope>test</scope>
         </dependency>
-
         <!-- Util -->
         <dependency>
             <groupId>commons-io</groupId>
